fix(project): make header buttons visible when using a light header background

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -29,7 +29,7 @@ $large-button-height: 40px;
   }
 
   &.default {
-    color: theme.$btn-default-color;
+    color: currentColor;
     background-color: theme.$btn-default-bg;
   }
 
