--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -18,7 +18,7 @@
   height: 100%;
   padding: 0 36px 0 36px;
 
-  color: variables.$white;
+  color: currentColor;
   font-weight: 700;
   font-size: 16px;
 
@@ -28,6 +28,11 @@
   border-radius: 4px;
 
   transition: border 0.1s ease, background 0.1s ease;
+
+  &::-webkit-input-placeholder {
+    color: currentColor;
+    opacity: 0.5;
+  }
 
   &:focus,
   &:active {
